--- a/src/main/resources/static/add-personal-expense.html
+++ b/src/main/resources/static/add-personal-expense.html
@@ -7,8 +7,8 @@
 <body>
 <div class="base-body">
     <form action="/send-personal-expense" class="form-add-exp" method="POST">
-        <label for="expense-userid">User ID:</label>
-        <input type="text" id="expense-userid" name="userId">
+        <label for="expense-username">Username:</label>
+        <input type="text" id="expense-username" name="username">
         <br><br>
 
         <label for="expense-description">Description:</label>
